виправлено позиціонування свг іконок

--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -96,11 +96,11 @@
     </div>
   </div>
 </section>
-<!--Мы гарантируем
+<!--Мы гарантируем-->
 
 <section class="guarantee">
   <h2 class="subtitle">Мы гарантируем</h2>
-  <div class="container">
+    <div class="container">
     <div class="guarantee-container-list">
       <ul class="guarantee-list list">
         <li class="guarantee-list-item">
@@ -125,4 +125,4 @@
       </ul>
     </div>
   </div>
-</section>-->
+</section>
