--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -164,194 +164,14 @@ line-height: 1.555;
 }
 }
 
-/*
-@media screen and (min-width: 1344px) {
-  .subtitle {
-    font-size: 46px;
-  }
-}
+//===========================GUARANTEE SECTION==================//
 
-@media screen and (min-width: 768px) {
-  .teacher-list-container-name {
-    width: 516px;
-    margin-left: 40px;
-  }
-  .teacher-container {
-    display: flex;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-list-container-name {
-    width: 642px;
-    margin-left: 25px;
-  }
-  .teacher-container {
-    display: flex;
-  }
-}
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .image-teacher {
-    margin-bottom: 20px;
+  .guarantee .container {
+    background-color: #f1f1f1;
   }
 }
 
-.teacher-name {
-  display: inline-block;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.08em;
-  color: var(--title-text-color);
-  padding-bottom: 10px;
-  width: 280px;
-  border-bottom: 1px solid #b9b9b9;
-}
-@media screen and (min-width: 768px) {
-  .teacher-name {
-    border-bottom: 1px solid #b9b9b9;
-    width: 401px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .teacher-name {
-    font-size: 30px;
-    line-height: 1.123;
-    margin-bottom: 30px;
-    border-bottom: 1px solid #b9b9b9;
-    width: 640px;
-  }
-}
-@media screen and (min-width: 320px) {
-  .teacher-container {
-    margin-top: 20px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .teacher-container {
-    margin-top: 30px;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-container {
-    margin-top: 50px;
-  }
-}
-.teacher-list-item {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-}
-@media screen and (min-width: 320px) {
-  .teacher-list-item {
-    margin-top: 20px;
-    margin-bottom: 5px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .teacher-list-item {
-    font-size: 16px;
-    line-height: 1.25;
-    margin-bottom: 15px;
-    padding-right: 12px;
-  }
-}
-
-@media screen and (min-width: 320px) {
-  .teacher-list-item::before {
-    content: '';
-    width: 16px;
-    height: 14px;
-    margin-right: 10px;
-    background-image: url(../images/study/vector.svg);
-    background-repeat: no-repeat;
-  }
-  .teacher-list-item {
-    display: flex;
-  }
-}
-@media screen and (min-width: 768px) {
-  .teacher-list-item::before {
-    content: '';
-    width: 17px;
-    height: 14px;
-    margin-right: 8px;
-    background-image: url(../images/study/vector.svg);
-    background-repeat: no-repeat;
-  }
-  .teacher-list-item {
-    display: flex;
-  }
-}
-@media screen and (min-width: 1344px) {
-  .teacher-list-item::before {
-    content: '';
-    width: 24px;
-    height: 20px;
-    margin-right: 34px;
-    background-image: url(../images/study/vector.svg);
-    background-repeat: no-repeat;
-  }
-  .teacher-list-item {
-    display: flex;
-  }
-  .teacher-list-container {
-    margin-top: 20px;
-  }
-}
-
-.line-orage {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 164.9%;
-  align-items: center;
-  letter-spacing: 0.08em;
-  color: var(--accent-color);
-}
-.teacher-list-container-text {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.666;
-  color: var(--secondary-text-color);
-}
-.teacher-list-container-text:not(:last-child) {
-  margin-bottom: 24px;
-}
-
-@media screen and (min-width: 1344px) {
-  .teacher-list-container-text {
-    font-size: 18px;
-    line-height: 1.555;
-    margin-bottom: 20px;
-  }
-}
-.teacher-link {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.666;
-  text-decoration-line: underline;
-  color: var(--accent-color);
-}
-@media screen and (min-width: 1344px) {
-  .teacher-link {
-    font-size: 18px;
-    line-height: 1.555;
-  }
-}
-//----------------------------GUARANTEE SECTION
 @media screen and (min-width: 320px) {
   .guarantee .subtitle {
     text-align: center;
@@ -369,7 +189,6 @@ line-height: 1.555;
 .guarantee-list-item:not(:last-child) {
   margin-bottom: 24px;
 }
-
 @media screen and (min-width: 1344px) {
   .guarantee-list-item {
     font-size: 20px;
@@ -413,7 +232,6 @@ line-height: 1.555;
     color: #b9b9b9;
   }
 }
-
 @media screen and (min-width: 768px) {
   .guarantee-container-list {
     background-color: #f1f1f1;
@@ -449,7 +267,6 @@ line-height: 1.555;
 .guarantee-list-item:last-child:after {
   width: 0px;
 }
-
 @media screen and (min-width: 1344px) {
   .guarantee-container-list {
     background-color: #f1f1f1;
@@ -485,7 +302,6 @@ line-height: 1.555;
 .color-span {
   color: var(--accent-color);
 }
-
 .guarantee-icon-fire {
   width: 20px;
   height: 15px;
@@ -495,4 +311,4 @@ line-height: 1.555;
     width: 30px;
     height: 20px;
   }
-}*/
+}
