--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -41,8 +41,6 @@
 }
 
 .logo__first-desc {
-  color: black;
-
   @media screen and (min-width: 768px) {
     color: #ff6b09;
   }
@@ -60,7 +58,22 @@
   color: white;
   z-index: 11;
 
-  .logo__first-desc {
+  @media screen and (min-width: 768px) and (max-width: 1280px) {
+    font-weight: 800;
+    width: 130px;
+    font-size: 26px;
+
+    .logo__first-desc {
+      color: #ff6b09;
+    }
+  }
+
+  // .logo__first-desc {
+  //   color: white;
+  // }
+}
+.logo-reverse.logo__first-desc {
+  @media screen and (max-width: 767px) {
     color: white;
   }
 }
