добавляет псевдоэлемент спискам разделов обучения

--- a/src/partials/programm+why-us.html
+++ b/src/partials/programm+why-us.html
@@ -11,7 +11,7 @@
 
         <ul class="programm__study-section-list list">
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Grammar</h4>
+            <h4 class="programm__study-section-title">Grammar</h4>
 
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Nouns & Articles</li>
@@ -19,7 +19,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Vocabulary</h4>
+            <h4 class="programm__study-section-title">Vocabulary</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Family & Relations</li>
               <li class="programm__study-subject-list-item">People & Society</li>
@@ -34,7 +34,7 @@
 
         <ul class="programm__study-section-list list">
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Grammar</h4>
+            <h4 class="programm__study-section-title">Grammar</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Pronouns</li>
               <li class="programm__study-subject-list-item">Active Voice</li>
@@ -42,7 +42,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Vocabulary</h4>
+            <h4 class="programm__study-section-title">Vocabulary</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Home</li>
               <li class="programm__study-subject-list-item">School</li>
@@ -58,7 +58,7 @@
 
         <ul class="programm__study-section-list list">
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Grammar</h4>
+            <h4 class="programm__study-section-title">Grammar</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Modal verbs</li>
               <li class="programm__study-subject-list-item">Infinitive</li>
@@ -67,7 +67,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Vocabulary</h4>
+            <h4 class="programm__study-section-title">Vocabulary</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Travel & Tourism</li>
               <li class="programm__study-subject-list-item">Culture & Free Time</li>
@@ -75,7 +75,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Writing</h4>
+            <h4 class="programm__study-section-title">Writing</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Informal Letter</li>
             </ul>
@@ -89,7 +89,7 @@
 
         <ul class="programm__study-section-list list">
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Grammar</h4>
+            <h4 class="programm__study-section-title">Grammar</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Clauses: Conditional and Wishes</li>
               <li class="programm__study-subject-list-item">Direct / Reported speech</li>
@@ -99,7 +99,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Vocabulary</h4>
+            <h4 class="programm__study-section-title">Vocabulary</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Healthy Living</li>
               <li class="programm__study-subject-list-item">Nature & Environment</li>
@@ -107,7 +107,7 @@
             </ul>
           </li>
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">— Writing</h4>
+            <h4 class="programm__study-section-title">Writing</h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Formal Letter</li>
             </ul>
@@ -121,7 +121,7 @@
 
         <ul class="programm__study-section-list list">
           <li class="programm__study-section-list-item">
-            <h4 class="programm__study-section-title">—</h4>
+            <h4 class="programm__study-section-title"></h4>
             <ul class="programm__study-subject-list list">
               <li class="programm__study-subject-list-item">Revision</li>
               <li class="programm__study-subject-list-item">Tests</li>
