--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -1,4 +1,4 @@
-
+  
 .problems-text{
 font-family: Montserrat;
 font-style: normal;
@@ -64,8 +64,8 @@ position: relative;
     margin-bottom: 20px;
 }
 
-@media screen and (min-width:768px){
-    
+@media screen and (min-width:768px) and (max-width:1343px)
+{    
     .problems{
         height: 340px;
         padding-top: 60px;
@@ -76,11 +76,11 @@ position: relative;
         bottom: -220px;
     }
     .problems-text{
-        box-sizing: content-box;
-        width: 568px;
+        // box-sizing: content-box;
+        width: 558px;
         font-size: 26px;
         line-height: 1.307;
-    } 
+    }   
    
     .problem-list{
         display: flex;
@@ -92,8 +92,19 @@ position: relative;
     }
     .problem-list-item:nth-child(-n+4){
         margin-bottom: 20px;}
-   
-   
+
+   @media screen and (min-width:1344px){
+    .problems{
+        height: 560px;
+        padding-top:100px;
+    }
+    .section-problems{
+        min-width: 1314px;
+        bottom: -220px;
+
+    }
+   }
+  
 // .problem-list-item::nth-child(-n+4){
 // margin-bottom: 20px;
 //  }
