добвляет марждин секции Наша программа

--- a/src/sass/layout/_programm.scss
+++ b/src/sass/layout/_programm.scss
@@ -213,6 +213,7 @@
     background-image: url(../images/our_program/women_our_program.png);
     background-size: 672px 502px;
     background-position: calc(50% - 498px) 676px;
+    margin-bottom: 329px;
     padding-top: 120px;
     padding-bottom: 363px;
   }
