--- a/src/sass/layout/_why-us.scss
+++ b/src/sass/layout/_why-us.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 320px;
-  margin-bottom: 39px;
+  // margin-bottom: 39px;
 }
 
 .why-us__title {
