--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,12 +1,17 @@
 
 .benefits {
 
-& h2 {
+  & h2 {
+    display: flex;
+    justify-content: center;
     margin-top: 125px;
     margin-bottom: 15px;
 }
 
 & h3 {
+    display: flex;
+    justify-content: center;
+
     @media screen and (max-width: 767px){
     margin-bottom: 25px;  
     }
@@ -58,15 +63,40 @@
     @media screen and (max-width: 767px) {
         background-image: url(../images/splashing_milk.jpg);
         z-index: 1;
+        width: 100%;
       }
 
 }
 
 .benefits-list {
  
-   @media screen and (max-width: 767px) {
-   max-width: 230px;
-   }
+//    @media screen and (max-width: 767px) {
+//    max-width: 230px;
+//    }
+
+   @media screen and (min-width: 768px) {
+    display: flex;
+    width: auto;
+    margin: -15px;
+    }
+
+    & li {
+
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 6 * 10px) / 3);
+            margin: 15px;
+            }
+
+        & p {
+        padding-right: 100px;
+        
+        //     @media screen and (min-width: 1200px){
+        //     padding-right: 100px;
+        // }
+        }
+
+      
+    }
 
    & h3 {
     margin-top: 15px;
