Правки изображение и текст

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,19 +1,25 @@
 .problems{
     position: relative;
     padding-top: 50px;
-    height: 545px; 
-    background-color: var(--title-text-color);   
+    min-height: 545px; 
+    background-color: var(--title-text-color);
+    max-width: 767px;
+    width: 100%;         
     @media screen and (min-width:768px) {
     padding-top: 60px;
-    height: 340px;
+    min-height: 340px;
+    max-width: 1343px;
+    width: 100%;
     }
     @media screen and (min-width:1344px) {
-    padding-top: 100px;
-    height: 560px;
+    padding-top: 100px;    
+    min-height: 560px;
+    max-width: 1680px;
+    width: 100%;    
     
     background-image: url(../images/problems/campfire.png);
     background-repeat: no-repeat;
-    background-position: left 1088px bottom 0px;    
+    background-position: left 1090px top 88px;    
     background-size: 455px 472px;
     @media screen and (min-device-pixel-ratio: 2),
   screen and (-webkit-min-device-pixel-ratio: 2),
@@ -29,17 +35,17 @@
     left: auto;
     right: auto;
     max-width: 280px;
-    height: 488px;    
+    min-height: 488px;    
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);   
     @media screen and (min-width:768px) {
-    top: 188px;    
+    top: 188.5px;    
     max-width: 688px; 
-    height: 303px;
+    min-height: 303px;
     padding: 30px 46px 26px 96px;     
     }
     @media screen and (min-width:1344px){
-    top: 342px;
+    top: 348px;
     max-width: 1314px;
     height: 362px;
     padding: 70px 112px 62px 114px;
@@ -52,7 +58,7 @@
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
     @media screen and (min-width:768px) {
-    font-size: 26px;            
+    font-size: 26px;               
     }
     @media screen and (min-width:1344px) {
     font-size: 46px;
