--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -35,6 +35,10 @@
       margin-right: 21px;
       .description-text {
         max-width: 146px;
+        margin-left: 10px;
+
+        font-family: Montserrat;
+        font-style: normal;
         font-weight: bold;
         font-size: 14px;
         line-height: 20px;
