добавляет anitation-function

--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -115,6 +115,8 @@
   letter-spacing: 0.08em;
   padding-left: 28px;
 
+  transition: border-color var(--anitation-function);
+
   @media screen and (min-width: 768px) {
     width: 390px;
   }
