--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -62,6 +62,8 @@
   letter-spacing: 0.08em;
   color: #111518;
   transform: scale(1);
+
+  transition: transform var(--anitation-function);
   @media screen and (max-width: 767px) {
     font-size: 20px;
     line-height: 1.2;
@@ -88,6 +90,7 @@
 .footer-top__link-insta {
   display: flex;
   transform: scale(1);
+  transition: transform var(--anitation-function);
 
   @media screen and (max-width: 767px) {
     justify-content: center;
