--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -158,6 +158,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    @extend %scale_to_div;
+
+
     @media screen and (min-width:768px) {
     width: 220px;
     top: 104px;
@@ -168,11 +171,25 @@
     width: 335px;
     top: 90px;
     }
+
+    :hover,
+    :focus {
+        @extend %scale_function
+
+        }
 }
+
+
+
+
 .card-img {
+    display: block;   
     margin: 0px;
     object-fit: cover;
+    
 }
+
+
 
 .ice_cream {
     background: $color-header;
