--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -4,3 +4,16 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
 }
+
+
+%scale_function {
+    transform: scale(1.25);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 0;
+    transition-duration: 250ms;
+}
+
+%scale_to_div {
+    opacity: 1;
+    transform: scale(1);
+}
