--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,12 +1,13 @@
 <div class="container">
     <div class="benefits">
-        <h2>tradition and love</h2>
-        <h3>how it’s made?</h3>
+        <h2 class="benefits-title">tradition and love</h2>
+        <h3 class="benefits-title">how it’s made?</h3>
 
         <div class="benefits-description">
 
             <img src="./images/cow.jpg" alt="cow">
-            <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+            <div>
+                <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
             <div class="special">
                 <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt. </p>
                 <p>Aliquam erat volutpat. Aenean accumsan.</p>
@@ -15,6 +16,8 @@
             <button class="read-more">Read more
                 <!-- <svg class="read-more=svg" width="10" height="10"> <use href="./svg/symbol-defs.svg#icon-icon-send"></use> </svg> -->
             </button>
+            </div>
+            
         </div>
 
         <div>
