--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,29 +1,168 @@
 .gallery {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  min-height: 541px;
+  background-color: $color-text-white;
 
   @media screen and (min-width: 768px) {
     padding-top: 120px;
     padding-bottom: 120px;
+    min-height: 380px;
   }
 
   @media screen and (min-width: 1280px) {
     padding-top: 125px;
     padding-bottom: 125px;
+    min-height: 350px;
   }
 }
 
-.reviews .container {
-  outline: 1px solid black;
-}
+// .gallery .container {
+//   outline: 1px solid black;
+// }
 
-.reviews .list {
-  @extend %list;
+.gallery-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
   text-align: center;
 }
 
-.reviews .img {
+.item .gallery-img {
+  display: inline-block;
+  max-height: 85px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
+  object-fit: fill;
+}
+
+.gallery .text-wrap {
+  padding: 0px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.gallery-text {
+  padding: 32px 52px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.86;
+
+  text-align: center;
+
+  color: $color-text-black;
+
+  @media screen and (min-width: 768px) {
+    padding: 29px 38px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 35px 55px;
+  }
+}
+
+.gallery .name::before {
+  display: block;
+  content: '';
+  width: 32px;
+  height: 4px;
+  margin-bottom: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $color-text-white;
+  background-image: url('../images/gallery.svg');
+}
+.name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.86;
+  text-align: center;
+  color: $color-text-black;
+  margin-bottom: 35px;
+}
+.carousel-indicators {
+  margin-bottom: 0px;
+}
+.carousel-indicators li {
+  background-color: $color-home-galary;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+.carousel-indicators li:not(:last-child) {
+  margin-right: 18px;
+}
+.text-wrap {
+  background-color: $color-bgr-galary;
+  width: 280px;
+  height: 308px;
+  padding: 0px;
+  margin-bottom: 30px;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    width: 620px;
+    height: 164px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 926px;
+    height: 138px;
+  }
+}
+/* Carousel base class */
+.carousel {
+  margin-bottom: 0;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  position: static;
+  bottom: 0;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 541px;
+
+  @media screen and (min-width: 768px) {
+    height: 380px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    height: 350px;
+  }
+}
+.carousel-item .gallery-img {
+  position: static;
+  top: 0;
+  left: 0;
+  min-width: 85px;
+  height: 100%;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 15px;
+    min-width: 85px;
+  }
+}
+.gallery-list .w-100 {
+  max-width: 85px;
+}
+.d-md-block {
+  @media (max-width: 767px) {
+    display: block !important;
+  }
+  @media (min-width: 768px) {
+    display: block !important;
+  }
+}
+.carousel-indicators {
+  position: static;
+}
+.icon-uniE900:before {
+  // content: '"""&#10078"""';
+  color: #e1e1e1;
 }
