--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,38 +1,47 @@
-<section class="gallery container">
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../images/mobile/gallery/lady1@2x.png" class="d-block w-100" alt="visitor's photo">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p class="text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
-                    nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-                <p class="name">Emily, Los Angeles</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="../images/mobile/gallery/lady2@2x.png" class="d-block w-100" alt="visitor's photo">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p class="text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
-                    nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-                <p class="name">Emily, Los Angeles</p>
+
+<section class="gallery">
+    <div class="container carousel slide" id="carouselExampleCaptions" data-ride="carousel">
+        <ul class="gallery-list carousel-inner">
+            <li class="item carousel-item active">
+                
+                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
+                
+                <div class="text-wrap carousel-caption d-none d-md-block">
+                    <p class="gallery-text">
+                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                        Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+                        ipsum primis in nibh vel risus.
+                    </p>
                 </div>
-        </div>
-        <div class="carousel-item">
-            <img src="../images/mobile/gallery/lady3@2x.png" class="d-block w-100" alt="visitor's photo">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p class="text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
-                    nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
                 <p class="name">Emily, Los Angeles</p>
+            </li>
+            <li class="item carousel-item">
+                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady1@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
+                <div class="text-wrap carousel-caption d-none d-md-block">
+                    <p class="gallery-text">
+                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                        Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+                        ipsum primis in nibh vel risus.
+                    </p>
                 </div>
-        </div>
+                <p class="name">Alice, Chicago</p>
+            </li>
+            <li class="item carousel-item">
+                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady2@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
+                <div class="text-wrap carousel-caption d-none d-md-block">
+                    <p class="gallery-text">
+                        <span class="icon-uniE900">&#10078</span> Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                        Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+                        ipsum primis in nibh vel risus.
+                    </p>
+                </div>
+                <p class="name">Jasmine, New York</p>
+            </li>
+        </ul>
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
     </div>
-</div>
 </section>
