--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -1,26 +1,32 @@
 .features {
-  margin-top: 30px;
+  padding-top: 50px;
 }
-.features_title {
-  //   width: 216px;
-  //   height: 240px;
+// .features_title {
+//   //   width: 216px;
+//   //   height: 240px;
+// }
+.features-list {
+  width: 216px;
+  height: 240px;
+  left: 52px;
 }
 .features-list_item {
-  display: flex;
   align-items: center;
-  width: 215px;
-  height: 60px;
-  left: 53px;
+  display: flex;
+  // width: 216px;
+  // height: 60px;
   margin-bottom: 30px;
 }
-.border-icon {
-  border: 2px solid $orange;
-  width: 59px;
-  height: 60px;
-  margin-right: 17px;
-}
+// .border-icon {
+//   border: 2px solid $orange;
+//   width: 59px;
+//   height: 60px;
+//   margin-right: 17px;
+// }
 .features-list_icon {
-  padding: 10px 10px;
+  width: 58.8px;
+  height: 60px;
+  margin-right: 10px;
 }
 .features-list_title {
   @include font(700, 14px, 1.428, left, 0.08em);
@@ -33,29 +39,61 @@
   .features-list {
     display: flex;
   }
+  .features-list {
+    //   width: 688px;
+    height: 60px;
+  }
+
+  .features {
+    padding-top: 60px;
+    // align-items: center;
+  }
+  .features-list_item {
+    // width: 216px;
+    margin-right: 22px;
+  }
+  .features-list_icon {
+    margin-right: 17px;
+  }
 }
 @media screen and (min-width: 1344px) {
-  .features-list_item {
+  .features {
+    padding-top: 95.5px;
+  }
+  .features_list {
     width: 1344px;
     height: 102px;
   }
-  .features-list {
-    display: flex;
-  }
   .features-list_icon {
-    padding: 24px 24px;
-  }
-  .border-icon {
-    border: 2px solid $orange;
     width: 100px;
     height: 102px;
-    margin-right: 17px;
+    margin-right: -10px;
   }
+  //   // .border-icon {
+  //   //   border: 2px solid $orange;
+  //   //   width: 100px;
+  //   //   height: 102px;
+  //   //   margin-right: -18px;
+  // }
   .features-list_title {
     @include font(700, 20px, 1.65, left, 0.08em);
     color: $black;
     width: 366px;
     height: 66px;
     letter-spacing: 0.08em;
+    margin-right: -19px;
   }
+  .features-list_item {
+    margin-right: 0px;
+  }
+
+  // .features-list_icon {
+  //   width: 100px;
+  //   height: 102px;
+  //   margin-right: -19px;
+  // }
+
+  // .features-list_icon {
+  //   width: 100%;
+  //   height: 100%x;
 }
