исправил фон секции gallery

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,3 +1,12 @@
+.gallery-main {
+  background-image: linear-gradient(
+    #fff5f6 0%,
+    #fff5f6 40%,
+    #ffffff 40%,
+    #ffffff 100%
+  );
+}
+
 .gallery {
   margin-left: auto;
   margin-right: auto;
@@ -6,7 +15,7 @@
   background-image: url('../images/gallery/gallery@x1-mob-min.jpg');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center;
+  background-position: top;
 
   @media screen and (min-width: 1200px) {
     max-width: 1280px;
