--- a/src/sass/_programm.scss
+++ b/src/sass/_programm.scss
@@ -1,400 +1,371 @@
 .program-section {
-
-    background: var(--b-dark);
-    position: relative;
+  position: relative;
+  min-height: 2370px;
 }
 .program-section .container {
-    
-    position: relative;
+  padding-top: 50px;
+  position: relative;
+  background: var(--b-dark);
 }
 .program-title {
-    
-    color: var(--txt-light);
-    
-    
+  color: var(--txt-light);
 }
 .program-items {
-    margin-bottom: 50px;
-    
-
-    
+  margin-bottom: 50px;
 }
 .program-item-title {
-    
-    @include font (700, 14px, 2, 0.08em);
-    color: var(--txt-light);
-    margin-bottom: 11px;
-    
+  @include font(700, 14px, 2, 0.08em);
+  color: var(--txt-light);
+  margin-bottom: 11px;
 }
 
-
 .program-item-subtitle {
-    @include font (700, 12px, 1.649, 0.08em);
-    color: var(--txt-orange);
-    padding-left: 52px;
-    padding-bottom: 6px;
-    padding-top: 7px;
-    margin-bottom: 8px;
-    position: relative;
+  @include font(700, 12px, 1.649, 0.08em);
+  color: var(--txt-orange);
+  padding-left: 52px;
+  padding-bottom: 6px;
+  padding-top: 7px;
+  margin-bottom: 8px;
+  position: relative;
 }
 
 .program-item-subtitle::before {
-    content: "";
-    position: absolute;
-    width: 12px;
-    height: 1px;
-    bottom: 50%;
-    left: 40px;
-    
-    transform: translate(-50%);
-    background-color: var(--b-accent-background);
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 1px;
+  bottom: 50%;
+  left: 40px;
+
+  transform: translate(-50%);
+  background-color: var(--b-accent-background);
 }
 
-
 .program-topics-item {
-    @include font (500, 12px, 1.667, 0.08em);
-    color: var(--txt-light);
-    opacity: 0.5;
-    padding-left: 32px;
-    
+  @include font(500, 12px, 1.667, 0.08em);
+  color: var(--txt-light);
+  opacity: 0.5;
+  padding-left: 32px;
 }
 .program-item-grammar,
 .program-item-vocabulary {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 .program-item-subtitle.last {
-    margin-bottom: 10px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  margin-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .program-list-img {
-    display: inline-block;
-    position: absolute;
-    top: 72%;
-    right: 0;
-    opacity: 0.5;
+  display: inline-block;
+  position: absolute;
+  top: 72%;
+  right: 0;
 }
 
 .program-subtitle {
-   
-    color: var(--txt-light);
-   
-    margin-bottom: 30px;
-  
+  color: var(--txt-light);
+
+  margin-bottom: 30px;
 }
 .program-dignity-number {
-    @include font (700, 14px, 1.649, 0.08em);
-    color: var(--txt-orange);
-    position: relative;
-    margin-left: 20px;
-    margin-bottom: 10px;
+  @include font(700, 14px, 1.649, 0.08em);
+  color: var(--txt-orange);
+  position: relative;
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
 .program-dignity-number::before {
-    content: "";
-    position: absolute;
-    width: 15px;
-    height: 2px;
-    bottom: 50%;
-    left: -12px;
-    transform: translate(-50%);
-    background-color: var(--b-accent-background);
-    
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  bottom: 50%;
+  left: -12px;
+  transform: translate(-50%);
+  background-color: var(--b-accent-background);
 }
 .program-dignity-text {
-    @include font (700, 14px, 1.429, 0.08em);
-    color: var(--txt-dark);
+  @include font(700, 14px, 1.429, 0.08em);
+  color: var(--txt-dark);
 }
-.program-dignity-items{
-    background: var(--b-white);
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    position: absolute;
-    min-width: 280px;
-    justify-content: center;
-    padding: 20px 30px;
+.program-dignity-items {
+  background: var(--b-white);
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  position: absolute;
+  min-width: 280px;
+  justify-content: center;
+  padding: 20px 31px;
 }
 
-.program-dignity {
-    position: relative;
-}
 @media screen and (min-width: 320px) and (max-width: 767px) {
-    .program-section .container {
-        padding-bottom: 405px;
-    }
-    .program-title {
-        @include font (800, 20px, 1.3, 0.03em);
-        text-align: center;
-        margin-bottom: 43px;
-    }
-    .program-item:not(:last-child) {
-        margin-bottom: 40px;
-    }
-    .program-subtitle {
-        @include font (800, 20px, 1.36, 0.03em);
-        max-width: 180px;
-        text-align: left;
-        
-      
-    }
-    .program-item-title::before {
-        display: inline-block;
-        content: "";
-        position: relative;
-        margin-right: 20px;
-        padding: 6px;
-        border: 1px solid #FF6B09;
-        background: var(--b-accent-background);
-        border-radius: 50%;
-    }
-    .program-items:not(:last-child)::before{
-        content: '';
-        position: absolute;
-        top: 86px;
-        left: 32%;
-        width: 1px;
-        height: 64%;
-        background:  var(--b-white);
-    
-    }
-    .program-item {
-        padding-left: 80px;
-    }
-    .program-dignity-item:not(:last-child) {
-        margin-bottom: 20px;
-    }
+  .program-section .container {
+    padding-bottom: 405px;
+  }
+  .program-title {
+    @include font(800, 20px, 1.3, 0.03em);
+    text-align: center;
+    margin-bottom: 43px;
+  }
+  .program-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .program-subtitle {
+    @include font(800, 20px, 1.36, 0.03em);
+    max-width: 180px;
+    text-align: left;
+  }
+  .program-item-title::before {
+    display: inline-block;
+    content: '';
+    position: relative;
+    margin-right: 20px;
+    padding: 6px;
+    border: 1px solid #ff6b09;
+    background: var(--b-accent-background);
+    border-radius: 50%;
+  }
+  .program-items:not(:last-child)::before {
+    content: '';
+    position: absolute;
+    top: 126px;
+    left: 29%;
+    width: 1px;
+    height: 63%;
+    background: var(--b-white);
+  }
+  .program-item {
+    padding-left: 71px;
+  }
+  .program-dignity-items {
+    width: 280px;
+  }
+  .program-dignity-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-    .program-section {
-        padding-top: 60px;
-    }
-    .program-section .container {
-        padding-bottom: 145px;
-    }
-    .program-title {
-        @include font (800, 26px, 1.3, 0.03em);
-        text-align: left;
-        margin-bottom: 60px;
-    }
-    .program-item-semester {
-        display: flex;
-    }
-    .program-item-title {
-        margin-bottom: 5px;
-    }
-    .program-item {
-        padding-left: 70px;
-    }
-    .program-item:not(:last-child) {
-        margin-bottom: 30px;
-    }
-    .program-item-subtitle {
-        @include font (700, 12px, 1.667, 0.08em);
-        padding-top: 6px;
-        margin-bottom: 5px;
-        padding-left: 20px;
-    }
-    .program-item-title::before {  
-        display: inline-block;
-        content: "";
-        position: relative;
-        padding: 6px;
-        border: 1px solid #FF6B09;
-        background: var(--b-accent-background);
-        border-radius: 50%; 
-        margin-right: 38px;
-    }
-    .program-items:not(:last-child)::before{
-        content: '';
-        position: absolute;
-        width: 1px;
-        background:  var(--b-white);
-        top: 100px;
-        left: 15%;
-        height: 55%;
-    }
-    .program-item-subtitle::before {
-        left: 6px;
-    }
-    .program-topics-item {
-        padding-left: 0px;
-    }
-    .program-item-grammar,
-    .program-item-vocabulary{
-        margin-bottom: 8px;
-        margin-left: 50px;
-        width: 176px;
-    }
-    .program-item-vocabulary {
-        margin-right: 50px;
-    }
-    .program-item-results {
-        padding-left: 50px;
-    }
-    .program-list-img {
-        top: 59%;  
-    }
-    
-    .program-subtitle {
-        @include font (800, 26px, 1.3, 0.03em);
-        min-width: 100%;
-        text-align: center;
-    }
-    .program {
-        margin-bottom: 189px;
-    }
-    .program-dignity-number {
-        margin-left: 23px;
-        margin-bottom: 10px;
-    }
-    .program-dignity-number::before {
-        left: -15px;
-    }
-    .program-dignity-items{
-        position: absolute;
-        max-width: 688px;
-        display: flex;
-        
-        flex-wrap: wrap;
-        padding: 30px 0 25px 0;
-    }
-    .program-dignity-item {
-        display: inline-block;
-        max-width: 236px;
-    }
-    .program-dignity-item:nth-child(-n + 4)  {
-        margin-bottom: 30px;
-    }
-    .program-dignity-item:nth-child(2n-1) {
-        margin-right: 20px;
-        margin-left: 98px;
-    }
-    .program-dignity-item:nth-child(2n) {
-        margin-right: 98px;
-        margin-left: 0;
-    }
+  .program-section {
+    min-height: 1747px;
+    padding-top: 60px;
+  }
+  .program-section .container {
+    padding-bottom: 145px;
+  }
+  .program-title {
+    @include font(800, 26px, 1.3, 0.03em);
+    text-align: left;
+    margin-bottom: 60px;
+  }
+  .program-item-semester {
+    display: flex;
+  }
+  .program-item-title {
+    margin-bottom: 5px;
+  }
+  .program-item {
+    padding-left: 70px;
+  }
+  .program-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .program-item-subtitle {
+    @include font(700, 12px, 1.667, 0.08em);
+    padding-top: 6px;
+    margin-bottom: 5px;
+    padding-left: 20px;
+  }
+  .program-item-title::before {
+    display: inline-block;
+    content: '';
+    position: relative;
+    padding: 6px;
+    border: 1px solid #ff6b09;
+    background: var(--b-accent-background);
+    border-radius: 50%;
+    margin-right: 38px;
+  }
+  .program-items:not(:last-child)::before {
+    content: '';
+    position: absolute;
+    width: 1px;
+    background: var(--b-white);
+    top: 151px;
+    left: 114px;
+    height: 53%;
+  }
+  .program-item-subtitle::before {
+    left: 6px;
+  }
+  .program-topics-item {
+    padding-left: 0px;
+  }
+  .program-item-grammar,
+  .program-item-vocabulary {
+    margin-bottom: 8px;
+    margin-left: 50px;
+    width: 176px;
+  }
+  .program-item-vocabulary {
+    margin-right: 50px;
+  }
+  .program-item-results {
+    padding-left: 50px;
+  }
+  .program-list-img {
+    top: 61%;
+  }
+
+  .program-subtitle {
+    @include font(800, 26px, 1.3, 0.03em);
+    min-width: 100%;
+    text-align: center;
+  }
+  .program {
+    margin-bottom: 189px;
+  }
+  .program-dignity-number {
+    margin-left: 23px;
+    margin-bottom: 10px;
+  }
+  .program-dignity-number::before {
+    left: -15px;
+  }
+  .program-dignity-items {
+    position: absolute;
+    max-width: 688px;
+    display: flex;
+
+    flex-wrap: wrap;
+    padding: 30px 0 25px 0;
+  }
+  .program-dignity-item {
+    display: inline-block;
+    max-width: 236px;
+  }
+  .program-dignity-item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+  .program-dignity-item:nth-child(2n-1) {
+    margin-right: 20px;
+    margin-left: 98px;
+  }
+  .program-dignity-item:nth-child(2n) {
+    margin-right: 98px;
+    margin-left: 0;
+  }
 }
 
-
 @media screen and (min-width: 1200px) {
-    .program-section .container {
-        
-    }
-    .program-title {
-        @include font (800, 46px, 1.3, 0.03em);
-        
-        // text-align: center;
-        margin-bottom: 160px;
-    }
-    .program-item:not(:last-child) {
-        margin-right: 30px;
-        
-    }
-    .program-item:first-child {
-        
-    }
-    .program-items {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 164px;
-        // flex-direction: column;
-    }
-    .program-item {
-        
-        width: 240px;
-        
-    }
-    .program-item-title {
-    
-        @include font (700, 20px, 1.4, 0.08em);
-        margin-bottom: 25px;
-        
-        
-    }
-    .program-item-subtitle {
-        @include font (700, 20px, 1.649, 0.08em);
-        padding-left: 18px;
-    }
-    .program-topics-item {
-        @include font (500, 18px, 1.556, 0.08em);
-       
-        
-        padding-left: 0px;
-        
-    }
-    .program-item-subtitle::before {
-        
-        width: 12px;
-        height: 1px;
-        bottom: 50%;
-        left: 5px;
-        
-        transform: translate(-50%);
-        background-color: var(--b-accent-background);
-    }
-    .program-list-img {
-        display: inline-block;
-        position: absolute;
-        top: 51%;
-        left: -140px;
-        opacity: 0.5;
-    }
-    .program-line {
-        display: inline-block;
-        position: absolute;
-        width: 100%;
-        border: 1px solid #FFFFFF;
-        top: 13%;
-        left: 0;
-        
+  .program-section {
+    min-height: 1566px;
+  }
+  .program-container {
+    width: 100%;
+    background: var(--b-dark);
+  }
+  .program-title {
+    @include font(800, 46px, 1.3, 0.03em);
 
-    }
-    .program-item-title::before {
-        display: inline-block;
-        content: "";
-        position: absolute;
-        margin-right: 0px;
-        padding: 6px;
-        border: 1px solid #FF6B09;
-        background: var(--b-accent-background);
-        top: 12.5%;
-        border-radius: 50%;
-        z-index: 1;
-    }
-    .program-item-grammar,
-    .program-item-vocabulary{
-        margin-bottom: 25px;
-        
-    }
-    .program-subtitle {
-       display: none;
-    }
-    .program-section .container {
-        padding-bottom: 180px;
-    }
-    .program-dignity-items{
-        position: absolute;
-        
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding: 70px 84px;
-    }
-    .program-dignity-item {
-        display: inline-block;
-        max-width: 356px;
-        
-    }
-    .program-dignity-number {
-    @include font (700, 20px, 1.649, 0.08em);
+    // text-align: center;
+    margin-bottom: 160px;
+  }
+  .program-item:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  .program-items {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 164px;
+    // flex-direction: column;
+  }
+  .program-item {
+    width: 240px;
+  }
+  .program-item-title {
+    @include font(700, 20px, 1.4, 0.08em);
+    margin-bottom: 25px;
+  }
+  .program-item-subtitle {
+    @include font(700, 20px, 1.649, 0.08em);
+    padding-left: 18px;
+  }
+  .program-topics-item {
+    @include font(500, 18px, 1.556, 0.08em);
+
+    padding-left: 0px;
+  }
+  .program-item-subtitle::before {
+    width: 12px;
+    height: 1px;
+    bottom: 50%;
+    left: 5px;
+
+    transform: translate(-50%);
+    background-color: var(--b-accent-background);
+  }
+  .program-list-img {
+    display: inline-block;
+    position: absolute;
+    top: 56%;
+    left: -140px;
+    opacity: 0.5;
+  }
+  .program-line {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    border: 1px solid #ffffff;
+    top: 277px;
+    left: 0;
+    z-index: 1;
+  }
+  .program-item-title::before {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    margin-right: 0px;
+    padding: 6px;
+    border: 1px solid #ff6b09;
+    background: var(--b-accent-background);
+    top: 271px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  .program-item-grammar,
+  .program-item-vocabulary {
+    margin-bottom: 25px;
+  }
+  .program-subtitle {
+    display: none;
+  }
+  .program-section .container {
+    padding-top: 120px;
+    padding-bottom: 180px;
+  }
+  .program-dignity-items {
+    position: absolute;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 70px 84px;
+  }
+  .program-dignity-item {
+    display: inline-block;
+    max-width: 356px;
+  }
+  .program-dignity-number {
+    @include font(700, 20px, 1.649, 0.08em);
     margin-left: 20px;
     margin-bottom: 10px;
-    }
-    .program-dignity-text {
-        @include font (700, 20px, 1.2, 0.08em);
-        
-    }
-    .program-dignity-item:nth-child(-n + 3)  {
-        margin-bottom: 32px;
-    }
-
+  }
+  .program-dignity-text {
+    @include font(700, 20px, 1.2, 0.08em);
+  }
+  .program-dignity-item:nth-child(-n + 3) {
+    margin-bottom: 32px;
+  }
 }
